<resources>
    <string name="app_name">Food Runner</string>
    <string name="num">Mobile Number (10 digits)</string>
    <string name="pass">Password (Min. 6 characters)</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="app_logo">app_logo</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Username (Min. 3 characters)</string>
    <string name="email">Email Address</string>
    <string name="add">Delivery Address</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password_min_5_characters">New Password (Min. 6 characters)</string>
    <string name="submit">Submit</string>
    <string name="registered_email">Registered Email</string>
    <string name="shared_pref">Food Runner Shared Preferences</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="add_to_cart">Add</string>
    <string name="remove_from_cart">Remove</string>
    <string name="nothing_added_to_favourites_yet">Nothing added to Favourites yet!!!</string>
    <string name="noFav">NoFav</string>
    <string name="restaurant_logo">Restaurant Logo</string>
    <string name="home">Home</string>
    <string name="user_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="frequently_asked_question_faqs">Frequently Asked Question (FAQs)</string>
    <string name="log_out">Log out</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="place_order">Place Order</string>
    <string name="ok">OK</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed</string>
    <string name="choose_from_below">Choose from below:</string>
    <string name="ratings">Ratings</string>
    <string name="cost_low_to_high">Cost (Low to High)</string>
    <string name="cost_high_to_low">Cost (High to Low)</string>
    <string name="cost_person">Cost / person</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="search_restaurant">Search Restaurant</string>
    <string name="search_hint">Search Restaurants</string>
    <string name="ques1">Can I order from 2 or more restaurants at the same time?</string>
    <string name="ans1">Yes, of course!\nHowever each restaurant order will be treated as a different order. So the delivery charges may be applicable for each order.</string>
    <string name="ques2">Why do you charge delivery charges?</string>
    <string name="ans2">Each restaurant gives us a small percentage of the order amount. But for small orders we cannot afford to deliver within the commission we receive. Instead of declining such orders, we give you the option of delivering it to you, if you are prepared to pay the delivery charges.</string>
    <string name="ques3">Can I get discount for big orders?</string>
    <string name="ans3">Sorry, as a practice we do not give discounts as we work on very slim margins, already.\n
    But, we could check with the Restaurant - and IF they offer any special discount, we\'d be happy to pass it on to you!</string>
    <string name="ques4">What modes of payment are acceptable></string>
    <string name="ans4">You can use any ONE of the following Payment Modes:\n
        1. Cash on Delivery.\n
        2. Online Payment - using Credit Card / Debit Card / Net Banking.\n
        3. Dial-a-Meal Prepaid Account.\n
        4. Card on Delivery.
    </string>
    <string name="ques5">How to Contact Us?</string>
    <string name="ans5">You can reach us by:\n
        Email: cu.18bcs2293@gmail.com\n
        Mobile: +91 91234567890
    </string>
    <string name="you_have_not_ordered_anything_yet">Nothing ordered yet.</string>
    <string name="imgDrawer">imgDrawer</string>
    <string name="imgForEmptyLayout">imgForEmptyLayout</string>
</resources>
