<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/imgSizeLarge"
            android:layout_height="@dimen/imgSizeLarge"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTopBottom"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/app_logo_black" />

        <EditText
            android:id="@+id/etNum"
            style="@style/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginHorizontal="@dimen/et_marginHorizontal"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_action_primary_mobile"
            android:hint="@string/num"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etPass"
            style="@style/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etNum"
            android:layout_marginHorizontal="@dimen/et_marginHorizontal"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_action_primary_pass"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:maxLines="1" />

        <TextView
            android:id="@+id/txtForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPass"
            android:layout_marginStart="@dimen/et_marginHorizontal"
            android:fontFamily="@font/font_body"
            android:paddingVertical="@dimen/padding"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txtSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtForgotPass"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/et_marginHorizontal"
            android:layout_marginEnd="@dimen/et_marginHorizontal"
            android:paddingHorizontal="@dimen/paddingLarge"
            android:text="@string/login" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/et_marginHorizontal"
            android:fontFamily="@font/font_body"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txtSize"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</RelativeLayout>