<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/imgSizeLarge"
            android:layout_height="@dimen/imgSizeLarge"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTopBottom"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/app_logo_black" />

        <EditText
            android:id="@+id/etOtp"
            style="@style/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_marginHorizontal="@dimen/et_marginHorizontal"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_action_primary_otp"
            android:drawablePadding="@dimen/padding"
            android:hint="@string/otp_4_characters"
            android:inputType="number"
            android:maxLength="4" />

        <EditText
            android:id="@+id/etPass"
            style="@style/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etOtp"
            android:layout_marginHorizontal="@dimen/et_marginHorizontal"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_action_primary_pass"
            android:drawablePadding="@dimen/padding"
            android:hint="@string/new_password_min_5_characters"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etConfirmPass"
            style="@style/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPass"
            android:layout_marginHorizontal="@dimen/et_marginHorizontal"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_action_primary_pass"
            android:drawablePadding="@dimen/padding"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPass"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/et_marginHorizontal"
            android:layout_marginEnd="@dimen/et_marginHorizontal"
            android:paddingHorizontal="@dimen/paddingLarge"
            android:text="@string/submit" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</FrameLayout>