<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/imgSizeLarge"
            android:layout_height="@dimen/imgSizeLarge"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTopBottom"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/app_logo_black" />

        <EditText
            android:id="@+id/etNum"
            style="@style/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginHorizontal="@dimen/et_marginHorizontal"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_action_primary_mobile"
            android:hint="@string/num"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etNum"
            android:layout_marginHorizontal="@dimen/et_marginHorizontal"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_action_primary_email"
            android:hint="@string/registered_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <Button
            android:id="@+id/btnNext"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/et_marginHorizontal"
            android:layout_marginEnd="@dimen/et_marginHorizontal"
            android:paddingHorizontal="@dimen/paddingLarge"
            android:text="@string/next" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</RelativeLayout>